# reltovec

./: .gitignore  README.md  config.example.toml  devlog.md  docker-compose.yml  pyproject.toml  watcher.bash
openspec/changes/archive/2026-04-18-incremental-index-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-sqlite-batch-embedding-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-purge-failed-embeddings-by-error-code/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-refresh-status-batch-state/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-status-batch-outcome-summary/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-add-date-datetime-cutoff-filter/: design.md  proposal.md  tasks.md
openspec/specs/chromadb-storage-and-id-query/: spec.md
openspec/specs/openai-batch-embedding-pipeline/: spec.md
openspec/specs/sqlite-document-ingestion/: spec.md
scripts/: chromadb_explore.py
src/brcrawl_embedder/: __init__.py  batch_builder.py  batch_client.py  batch_result_parser.py  cli.py  config.py  models.py  orchestrator.py  planner.py  sqlite_source.py  state_store.py  vector_store.py
src/reltovec/: __init__.py  batch_builder.py  batch_client.py  batch_result_parser.py  cli.py  config.py  ids.py  models.py  orchestrator.py  planner.py  sqlite_source.py  state_store.py  vector_store.py
tests/: test_batch_builder_and_parser.py  test_cli.py  test_ingestion_and_config.py  test_orchestrator.py  test_state_store.py  test_vector_store.py
(+21 files in other folders)
