[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "brcrawl-embedder"
version = "0.1.0"
description = "SQLite to OpenAI Batch embeddings pipeline with ChromaDB storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.40.0",
  "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
brcrawl-embedder = "brcrawl_embedder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
